// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetailsScene should render 1`] = `
<BVLinearGradient
  colors={
    [
      4278585612,
      4279971643,
    ]
  }
  endPoint={
    {
      "x": 1,
      "y": 0,
    }
  }
  locations={null}
  startPoint={
    {
      "x": 0,
      "y": 0,
    }
  }
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 90,
      }
    }
    style={
      {
        "bottom": 0,
        "left": 0,
        "padding": 11,
        "position": "absolute",
        "right": 0,
        "top": 64,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "borderRadius": 22,
              "flex": 1,
              "padding": 11,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 22,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, 0)",
              "flex": 1,
              "flexDirection": "row",
              "paddingHorizontal": 11,
              "paddingVertical": 6,
            }
          }
        >
          <View
            style={
              {
                "marginRight": 6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "borderRadius": 22,
                    "height": 45,
                    "marginRight": 11,
                    "width": 45,
                  },
                ]
              }
            >
              <FastImageView
                resizeMode="cover"
                source={
                  {
                    "uri": "thumb/nail/path",
                  }
                }
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              adjustsFontSizeToFit={false}
              ellipsizeMode="tail"
              minimumFontScale={0.65}
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "includeFontPadding": false,
                  },
                  {
                    "color": "#A4C7DF",
                    "fontSize": 17,
                    "paddingBottom": 6,
                    "paddingRight": 22,
                  },
                  null,
                ]
              }
            >
              Sender Name
            </Text>
            <Text
              adjustsFontSizeToFit={true}
              minimumFontScale={0.65}
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "includeFontPadding": false,
                  },
                  undefined,
                  null,
                ]
              }
            >
              timmy
            </Text>
          </View>
          <View
            style={
              {
                "height": "100%",
                "width": 34,
              }
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={false}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "flex-end",
                "height": "100%",
                "justifyContent": "center",
                "opacity": 1,
                "paddingRight": 11,
                "position": "absolute",
                "right": 0,
                "width": "100%",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 22,
                  },
                  {
                    "color": "#00f1a2",
                    "marginLeft": 11,
                    "textAlign": "center",
                  },
                  {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 22,
              "flex": 1,
              "padding": 11,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 22,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Bitcoin Amount
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={3}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 22,
                    },
                    null,
                  ]
                }
              >
                ₿ 0.123
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "borderBottomColor": "rgba(255, 255, 255, .1)",
                  "borderBottomWidth": 1,
                  "height": 1,
                  "marginHorizontal": 11,
                  "marginVertical": 11,
                },
                {
                  "marginVertical": 0,
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Amount in USD
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  adjustsFontSizeToFit={true}
                  minimumFontScale={0.65}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Regular",
                        "fontSize": 22,
                        "includeFontPadding": false,
                      },
                      undefined,
                      null,
                    ]
                  }
                >
                  $ 
                </Text>
                <Text
                  adjustsFontSizeToFit={true}
                  minimumFontScale={0.65}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Regular",
                        "fontSize": 22,
                        "includeFontPadding": false,
                      },
                      undefined,
                      null,
                    ]
                  }
                >
                  0.00
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "height": "100%",
                  "width": 34,
                }
              }
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingRight": 11,
                  "position": "absolute",
                  "right": 0,
                  "width": "100%",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 22,
                    },
                    {
                      "color": "#00f1a2",
                      "marginLeft": 11,
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "borderBottomColor": "rgba(255, 255, 255, .1)",
                  "borderBottomWidth": 1,
                  "height": 1,
                  "marginHorizontal": 11,
                  "marginVertical": 11,
                },
                {
                  "marginVertical": 0,
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Amount at Current Price
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  adjustsFontSizeToFit={true}
                  minimumFontScale={0.65}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Regular",
                        "fontSize": 22,
                        "includeFontPadding": false,
                      },
                      undefined,
                      null,
                    ]
                  }
                >
                  $ 
                </Text>
                <Text
                  adjustsFontSizeToFit={true}
                  minimumFontScale={0.65}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Regular",
                        "fontSize": 22,
                        "includeFontPadding": false,
                      },
                      {
                        "color": "#FFFFFF",
                        "fontSize": 22,
                      },
                      null,
                    ]
                  }
                >
                  1230.00
                </Text>
                <Text
                  adjustsFontSizeToFit={true}
                  minimumFontScale={0.65}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Regular",
                        "fontSize": 22,
                        "includeFontPadding": false,
                      },
                      {
                        "color": "#77C513",
                        "fontSize": 22,
                      },
                      null,
                    ]
                  }
                >
                   (0%)
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "borderBottomColor": "rgba(255, 255, 255, .1)",
                  "borderBottomWidth": 1,
                  "height": 1,
                  "marginHorizontal": 11,
                  "marginVertical": 11,
                },
                {
                  "marginVertical": 0,
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Transaction ID
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={3}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 22,
                    },
                    null,
                  ]
                }
              >
                this is the txid
              </Text>
            </View>
            <View
              style={
                {
                  "height": "100%",
                  "width": 34,
                }
              }
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingRight": 11,
                  "position": "absolute",
                  "right": 0,
                  "width": "100%",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 22,
                    },
                    {
                      "color": "#00f1a2",
                      "marginLeft": 11,
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 22,
              "flex": 1,
              "padding": 11,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 22,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Category
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "marginVertical": 6,
                    },
                    null,
                  ]
                }
              >
                Income
              </Text>
            </View>
            <View
              style={
                {
                  "height": "100%",
                  "width": 34,
                }
              }
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingRight": 11,
                  "position": "absolute",
                  "right": 0,
                  "width": "100%",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 22,
                    },
                    {
                      "color": "#00f1a2",
                      "marginLeft": 11,
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "borderBottomColor": "rgba(255, 255, 255, .1)",
                  "borderBottomWidth": 1,
                  "height": 1,
                  "marginHorizontal": 11,
                  "marginVertical": 11,
                },
                {
                  "marginVertical": 0,
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Notes
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={3}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 22,
                    },
                    null,
                  ]
                }
              >
                Tap to Add Note (Optional)
              </Text>
            </View>
            <View
              style={
                {
                  "height": "100%",
                  "width": 34,
                }
              }
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingRight": 11,
                  "position": "absolute",
                  "right": 0,
                  "width": "100%",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 22,
                    },
                    {
                      "color": "#00f1a2",
                      "marginLeft": 11,
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 22,
              "flex": 1,
              "padding": 11,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 22,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                My Receive Addresses
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={3}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 22,
                    },
                    null,
                  ]
                }
              >
                this is an address
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "borderBottomColor": "rgba(255, 255, 255, .1)",
                  "borderBottomWidth": 1,
                  "height": 1,
                  "marginHorizontal": 11,
                  "marginVertical": 11,
                },
                {
                  "marginVertical": 0,
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Raw Transaction Bytes
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={2}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 22,
                    },
                    null,
                  ]
                }
              >
                this is a signed tx
              </Text>
            </View>
            <View
              style={
                {
                  "height": "100%",
                  "width": 34,
                }
              }
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingRight": 11,
                  "position": "absolute",
                  "right": 0,
                  "width": "100%",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 22,
                    },
                    {
                      "color": "#00f1a2",
                      "marginLeft": 11,
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          absolute={false}
          layout="column"
          style={
            {
              "bottom": undefined,
              "flexDirection": "column",
              "justifyContent": "space-evenly",
              "left": undefined,
              "margin": 11,
              "marginHorizontal": 11,
              "position": undefined,
              "right": undefined,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "elevation": 2,
                "opacity": 1,
                "shadowColor": "#FFFFFF",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0.25,
                "shadowRadius": 8,
              }
            }
          >
            <BVLinearGradient
              colors={
                [
                  4278754931,
                  4278251938,
                ]
              }
              endPoint={
                {
                  "x": 1,
                  "y": 0,
                }
              }
              locations={null}
              startPoint={
                {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                [
                  {
                    "alignItems": "center",
                    "borderColor": "rgba(255, 255, 255, 0)",
                    "borderRadius": 6,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "minHeight": 67,
                    "minWidth": 202,
                  },
                  {
                    "alignSelf": "auto",
                    "marginBottom": 112,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 11,
                    "opacity": 1,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                  },
                  {
                    "borderRadius": 6,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                  },
                ]
              }
            >
              <Text
                adjustsFontSizeToFit={true}
                minimumFontScale={0.75}
                numberOfLines={1}
                style={
                  {
                    "color": "#1b2f3b",
                    "fontFamily": "Quicksand-Medium",
                    "fontSize": 22,
                    "marginHorizontal": 0,
                    "paddingBottom": 11,
                    "paddingLeft": 17,
                    "paddingRight": 17,
                    "paddingTop": 11,
                    "textShadowColor": "#000000",
                    "textShadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "textShadowRadius": 0,
                  }
                }
              >
                Done
              </Text>
            </BVLinearGradient>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 6,
        "height": 79,
        "justifyContent": "flex-end",
        "marginHorizontal": 11,
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#121d25",
            "borderRadius": 11,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 6,
            "padding": 11,
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.7,
            "shadowRadius": 11,
          },
          {
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "center",
            "margin": 6,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "height": 56,
                "marginRight": 6,
                "width": 56,
              },
            ]
          }
        >
          <FastImageView
            resizeMode="cover"
            source={
              {
                "uri": "https://content.edge.app/notifications/icon-warning.png",
              }
            }
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
        <View
          style={
            {
              "flexShrink": 1,
              "width": "100%",
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            minimumFontScale={0.65}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 22,
                  "includeFontPadding": false,
                },
                {
                  "color": "#F1AA19",
                  "fontFamily": "Quicksand-Bold",
                  "fontSize": 17,
                  "marginHorizontal": 6,
                },
                null,
              ]
            }
            type="warning"
          >
            Back Up Your Account
          </Text>
          <Text
            adjustsFontSizeToFit={true}
            minimumFontScale={0.65}
            numberOfLines={3}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 22,
                  "includeFontPadding": false,
                },
                {
                  "color": "#F1AA19",
                  "fontSize": 17,
                  "marginHorizontal": 6,
                },
                null,
              ]
            }
            type="warning"
          >
            Without a backup, you risk losing your funds!
          </Text>
        </View>
      </View>
    </View>
  </View>
</BVLinearGradient>
`;

exports[`TransactionDetailsScene should render with negative nativeAmount and fiatAmount 1`] = `
<BVLinearGradient
  colors={
    [
      4278585612,
      4279971643,
    ]
  }
  endPoint={
    {
      "x": 1,
      "y": 0,
    }
  }
  locations={null}
  startPoint={
    {
      "x": 0,
      "y": 0,
    }
  }
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 90,
      }
    }
    style={
      {
        "bottom": 0,
        "left": 0,
        "padding": 11,
        "position": "absolute",
        "right": 0,
        "top": 64,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "borderRadius": 22,
              "flex": 1,
              "padding": 11,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 22,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, 0)",
              "flex": 1,
              "flexDirection": "row",
              "paddingHorizontal": 11,
              "paddingVertical": 6,
            }
          }
        >
          <View
            style={
              {
                "marginRight": 6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "borderRadius": 22,
                    "height": 45,
                    "marginRight": 11,
                    "width": 45,
                  },
                ]
              }
            >
              <FastImageView
                resizeMode="cover"
                source={
                  {
                    "uri": "thumb/nail/path",
                  }
                }
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              adjustsFontSizeToFit={false}
              ellipsizeMode="tail"
              minimumFontScale={0.65}
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "includeFontPadding": false,
                  },
                  {
                    "color": "#A4C7DF",
                    "fontSize": 17,
                    "paddingBottom": 6,
                    "paddingRight": 22,
                  },
                  null,
                ]
              }
            >
              Recipient Name
            </Text>
            <Text
              adjustsFontSizeToFit={true}
              minimumFontScale={0.65}
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "includeFontPadding": false,
                  },
                  undefined,
                  null,
                ]
              }
            >
              timmy
            </Text>
          </View>
          <View
            style={
              {
                "height": "100%",
                "width": 34,
              }
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={false}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "flex-end",
                "height": "100%",
                "justifyContent": "center",
                "opacity": 1,
                "paddingRight": 11,
                "position": "absolute",
                "right": 0,
                "width": "100%",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 22,
                  },
                  {
                    "color": "#00f1a2",
                    "marginLeft": 11,
                    "textAlign": "center",
                  },
                  {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 22,
              "flex": 1,
              "padding": 11,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 22,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Bitcoin Amount
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={3}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 22,
                    },
                    null,
                  ]
                }
              >
                ₿ 0.12299999 (+0 fee)
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "borderBottomColor": "rgba(255, 255, 255, .1)",
                  "borderBottomWidth": 1,
                  "height": 1,
                  "marginHorizontal": 11,
                  "marginVertical": 11,
                },
                {
                  "marginVertical": 0,
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Amount in USD
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  adjustsFontSizeToFit={true}
                  minimumFontScale={0.65}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Regular",
                        "fontSize": 22,
                        "includeFontPadding": false,
                      },
                      undefined,
                      null,
                    ]
                  }
                >
                  $ 
                </Text>
                <Text
                  adjustsFontSizeToFit={true}
                  minimumFontScale={0.65}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Regular",
                        "fontSize": 22,
                        "includeFontPadding": false,
                      },
                      undefined,
                      null,
                    ]
                  }
                >
                  6392.93
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "height": "100%",
                  "width": 34,
                }
              }
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingRight": 11,
                  "position": "absolute",
                  "right": 0,
                  "width": "100%",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 22,
                    },
                    {
                      "color": "#00f1a2",
                      "marginLeft": 11,
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "borderBottomColor": "rgba(255, 255, 255, .1)",
                  "borderBottomWidth": 1,
                  "height": 1,
                  "marginHorizontal": 11,
                  "marginVertical": 11,
                },
                {
                  "marginVertical": 0,
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Amount at Current Price
              </Text>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  adjustsFontSizeToFit={true}
                  minimumFontScale={0.65}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Regular",
                        "fontSize": 22,
                        "includeFontPadding": false,
                      },
                      undefined,
                      null,
                    ]
                  }
                >
                  $ 
                </Text>
                <Text
                  adjustsFontSizeToFit={true}
                  minimumFontScale={0.65}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Regular",
                        "fontSize": 22,
                        "includeFontPadding": false,
                      },
                      {
                        "color": "#FFFFFF",
                        "fontSize": 22,
                      },
                      null,
                    ]
                  }
                >
                  1230.00
                </Text>
                <Text
                  adjustsFontSizeToFit={true}
                  minimumFontScale={0.65}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "Quicksand-Regular",
                        "fontSize": 22,
                        "includeFontPadding": false,
                      },
                      {
                        "color": "#E85466",
                        "fontSize": 22,
                      },
                      null,
                    ]
                  }
                >
                   (-80.75%)
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "borderBottomColor": "rgba(255, 255, 255, .1)",
                  "borderBottomWidth": 1,
                  "height": 1,
                  "marginHorizontal": 11,
                  "marginVertical": 11,
                },
                {
                  "marginVertical": 0,
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Transaction ID
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={3}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 22,
                    },
                    null,
                  ]
                }
              >
                this is the txid
              </Text>
            </View>
            <View
              style={
                {
                  "height": "100%",
                  "width": 34,
                }
              }
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingRight": 11,
                  "position": "absolute",
                  "right": 0,
                  "width": "100%",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 22,
                    },
                    {
                      "color": "#00f1a2",
                      "marginLeft": 11,
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 22,
              "flex": 1,
              "padding": 11,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 22,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Category
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "marginVertical": 6,
                    },
                    null,
                  ]
                }
              >
                Expense
              </Text>
            </View>
            <View
              style={
                {
                  "height": "100%",
                  "width": 34,
                }
              }
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingRight": 11,
                  "position": "absolute",
                  "right": 0,
                  "width": "100%",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 22,
                    },
                    {
                      "color": "#00f1a2",
                      "marginLeft": 11,
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "borderBottomColor": "rgba(255, 255, 255, .1)",
                  "borderBottomWidth": 1,
                  "height": 1,
                  "marginHorizontal": 11,
                  "marginVertical": 11,
                },
                {
                  "marginVertical": 0,
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Notes
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={3}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 22,
                    },
                    null,
                  ]
                }
              >
                Tap to Add Note (Optional)
              </Text>
            </View>
            <View
              style={
                {
                  "height": "100%",
                  "width": 34,
                }
              }
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingRight": 11,
                  "position": "absolute",
                  "right": 0,
                  "width": "100%",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 22,
                    },
                    {
                      "color": "#00f1a2",
                      "marginLeft": 11,
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 22,
              "flex": 1,
              "padding": 11,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 22,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                My Receive Addresses
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={3}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 22,
                    },
                    null,
                  ]
                }
              >
                this is an address
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "borderBottomColor": "rgba(255, 255, 255, .1)",
                  "borderBottomWidth": 1,
                  "height": 1,
                  "marginHorizontal": 11,
                  "marginVertical": 11,
                },
                {
                  "marginVertical": 0,
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(255, 255, 255, 0)",
                "flex": 1,
                "flexDirection": "row",
                "paddingHorizontal": 11,
                "paddingVertical": 6,
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                adjustsFontSizeToFit={false}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={1}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#A4C7DF",
                      "fontSize": 17,
                      "paddingBottom": 6,
                      "paddingRight": 22,
                    },
                    null,
                  ]
                }
              >
                Raw Transaction Bytes
              </Text>
              <Text
                adjustsFontSizeToFit={true}
                ellipsizeMode="tail"
                minimumFontScale={0.65}
                numberOfLines={2}
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Regular",
                      "fontSize": 22,
                      "includeFontPadding": false,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 22,
                    },
                    null,
                  ]
                }
              >
                this is a signed tx
              </Text>
            </View>
            <View
              style={
                {
                  "height": "100%",
                  "width": 34,
                }
              }
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={false}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "flex-end",
                  "height": "100%",
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingRight": 11,
                  "position": "absolute",
                  "right": 0,
                  "width": "100%",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 22,
                    },
                    {
                      "color": "#00f1a2",
                      "marginLeft": 11,
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "FontAwesome",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          absolute={false}
          layout="column"
          style={
            {
              "bottom": undefined,
              "flexDirection": "column",
              "justifyContent": "space-evenly",
              "left": undefined,
              "margin": 11,
              "marginHorizontal": 11,
              "position": undefined,
              "right": undefined,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "elevation": 2,
                "opacity": 1,
                "shadowColor": "#FFFFFF",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0.25,
                "shadowRadius": 8,
              }
            }
          >
            <BVLinearGradient
              colors={
                [
                  4278754931,
                  4278251938,
                ]
              }
              endPoint={
                {
                  "x": 1,
                  "y": 0,
                }
              }
              locations={null}
              startPoint={
                {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                [
                  {
                    "alignItems": "center",
                    "borderColor": "rgba(255, 255, 255, 0)",
                    "borderRadius": 6,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "minHeight": 67,
                    "minWidth": 202,
                  },
                  {
                    "alignSelf": "auto",
                    "marginBottom": 112,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 11,
                    "opacity": 1,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                  },
                  {
                    "borderRadius": 6,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                  },
                ]
              }
            >
              <Text
                adjustsFontSizeToFit={true}
                minimumFontScale={0.75}
                numberOfLines={1}
                style={
                  {
                    "color": "#1b2f3b",
                    "fontFamily": "Quicksand-Medium",
                    "fontSize": 22,
                    "marginHorizontal": 0,
                    "paddingBottom": 11,
                    "paddingLeft": 17,
                    "paddingRight": 17,
                    "paddingTop": 11,
                    "textShadowColor": "#000000",
                    "textShadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "textShadowRadius": 0,
                  }
                }
              >
                Done
              </Text>
            </BVLinearGradient>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignSelf": "center",
        "bottom": 6,
        "height": 79,
        "justifyContent": "flex-end",
        "marginHorizontal": 11,
        "position": "absolute",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#121d25",
            "borderRadius": 11,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 6,
            "padding": 11,
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.7,
            "shadowRadius": 11,
          },
          {
            "opacity": 1,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "center",
            "margin": 6,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "height": 56,
                "marginRight": 6,
                "width": 56,
              },
            ]
          }
        >
          <FastImageView
            resizeMode="cover"
            source={
              {
                "uri": "https://content.edge.app/notifications/icon-warning.png",
              }
            }
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
        <View
          style={
            {
              "flexShrink": 1,
              "width": "100%",
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            minimumFontScale={0.65}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 22,
                  "includeFontPadding": false,
                },
                {
                  "color": "#F1AA19",
                  "fontFamily": "Quicksand-Bold",
                  "fontSize": 17,
                  "marginHorizontal": 6,
                },
                null,
              ]
            }
            type="warning"
          >
            Back Up Your Account
          </Text>
          <Text
            adjustsFontSizeToFit={true}
            minimumFontScale={0.65}
            numberOfLines={3}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 22,
                  "includeFontPadding": false,
                },
                {
                  "color": "#F1AA19",
                  "fontSize": 17,
                  "marginHorizontal": 6,
                },
                null,
              ]
            }
            type="warning"
          >
            Without a backup, you risk losing your funds!
          </Text>
        </View>
      </View>
    </View>
  </View>
</BVLinearGradient>
`;
